[gd_scene load_steps=117 format=2]

[ext_resource path="res://assets/Characters/2D_SL_Knight_v1.0/Run.png" type="Texture" id=1]
[ext_resource path="res://assets/Characters/2D_SL_Knight_v1.0/Idle.png" type="Texture" id=2]
[ext_resource path="res://scripts/knight.gd" type="Script" id=3]
[ext_resource path="res://assets/Characters/2D_SL_Knight_v1.0/Jump.png" type="Texture" id=4]
[ext_resource path="res://assets/Characters/2D_SL_Knight_v1.0/Attacks.png" type="Texture" id=5]
[ext_resource path="res://assets/Characters/2D_SL_Knight_v1.0/Slide.png" type="Texture" id=6]
[ext_resource path="res://assets/Characters/2D_SL_Knight_v1.0/Hurt.png" type="Texture" id=7]
[ext_resource path="res://assets/Characters/Player/sprite-player.png" type="Texture" id=8]
[ext_resource path="res://assets/Sounds/Retro FootStep Mud 01.wav" type="AudioStream" id=9]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 4.37545, 49.407 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 5 )
region = Rect2( 256, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 5 )
region = Rect2( 384, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 5 )
region = Rect2( 512, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 5 )
region = Rect2( 640, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 5 )
region = Rect2( 768, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 5 )
region = Rect2( 896, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=94]
atlas = ExtResource( 5 )
region = Rect2( 0, 64, 128, 64 )

[sub_resource type="AtlasTexture" id=95]
atlas = ExtResource( 5 )
region = Rect2( 128, 64, 128, 64 )

[sub_resource type="AtlasTexture" id=96]
atlas = ExtResource( 5 )
region = Rect2( 256, 64, 128, 64 )

[sub_resource type="AtlasTexture" id=97]
atlas = ExtResource( 5 )
region = Rect2( 384, 64, 128, 64 )

[sub_resource type="AtlasTexture" id=98]
atlas = ExtResource( 5 )
region = Rect2( 512, 64, 128, 64 )

[sub_resource type="AtlasTexture" id=99]
atlas = ExtResource( 5 )
region = Rect2( 640, 64, 128, 64 )

[sub_resource type="AtlasTexture" id=100]
atlas = ExtResource( 5 )
region = Rect2( 768, 64, 128, 64 )

[sub_resource type="AtlasTexture" id=101]
atlas = ExtResource( 5 )
region = Rect2( 896, 64, 128, 64 )

[sub_resource type="AtlasTexture" id=102]
atlas = ExtResource( 5 )
region = Rect2( 0, 128, 128, 64 )

[sub_resource type="AtlasTexture" id=103]
atlas = ExtResource( 5 )
region = Rect2( 128, 128, 128, 64 )

[sub_resource type="AtlasTexture" id=104]
atlas = ExtResource( 5 )
region = Rect2( 256, 128, 128, 64 )

[sub_resource type="AtlasTexture" id=105]
atlas = ExtResource( 5 )
region = Rect2( 384, 128, 128, 64 )

[sub_resource type="AtlasTexture" id=106]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=107]
atlas = ExtResource( 6 )
region = Rect2( 128, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=108]
atlas = ExtResource( 6 )
region = Rect2( 256, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=109]
atlas = ExtResource( 6 )
region = Rect2( 384, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=110]
atlas = ExtResource( 6 )
region = Rect2( 0, 64, 128, 64 )

[sub_resource type="AtlasTexture" id=111]
atlas = ExtResource( 6 )
region = Rect2( 128, 64, 128, 64 )

[sub_resource type="AtlasTexture" id=112]
atlas = ExtResource( 6 )
region = Rect2( 256, 64, 128, 64 )

[sub_resource type="AtlasTexture" id=113]
atlas = ExtResource( 6 )
region = Rect2( 384, 64, 128, 64 )

[sub_resource type="AtlasTexture" id=114]
atlas = ExtResource( 6 )
region = Rect2( 0, 128, 128, 64 )

[sub_resource type="AtlasTexture" id=115]
atlas = ExtResource( 6 )
region = Rect2( 128, 128, 128, 64 )

[sub_resource type="AtlasTexture" id=117]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=118]
atlas = ExtResource( 7 )
region = Rect2( 128, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=119]
atlas = ExtResource( 7 )
region = Rect2( 0, 64, 128, 64 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 2 )
region = Rect2( 0, 64, 128, 64 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 2 )
region = Rect2( 128, 64, 128, 64 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 2 )
region = Rect2( 0, 128, 128, 64 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 2 )
region = Rect2( 128, 128, 128, 64 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 2 )
region = Rect2( 0, 192, 128, 64 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 2 )
region = Rect2( 128, 192, 128, 64 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 4 )
region = Rect2( 0, 64, 128, 64 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 4 )
region = Rect2( 128, 64, 128, 64 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 4 )
region = Rect2( 0, 128, 128, 64 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 4 )
region = Rect2( 128, 128, 128, 64 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 4 )
region = Rect2( 0, 192, 128, 64 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 4 )
region = Rect2( 128, 192, 128, 64 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 128, 64 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 1 )
region = Rect2( 128, 64, 128, 64 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 1 )
region = Rect2( 0, 128, 128, 64 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 1 )
region = Rect2( 128, 128, 128, 64 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 1 )
region = Rect2( 0, 192, 128, 64 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 1 )
region = Rect2( 128, 192, 128, 64 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 128, 64 )

[sub_resource type="AtlasTexture" id=88]
atlas = ExtResource( 1 )
region = Rect2( 128, 64, 128, 64 )

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 1 )
region = Rect2( 0, 128, 128, 64 )

[sub_resource type="AtlasTexture" id=90]
atlas = ExtResource( 1 )
region = Rect2( 128, 128, 128, 64 )

[sub_resource type="AtlasTexture" id=91]
atlas = ExtResource( 1 )
region = Rect2( 0, 192, 128, 64 )

[sub_resource type="AtlasTexture" id=92]
atlas = ExtResource( 1 )
region = Rect2( 128, 192, 128, 64 )

[sub_resource type="SpriteFrames" id=84]
animations = [ {
"frames": [ SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 94 ), SubResource( 95 ), SubResource( 96 ), SubResource( 97 ), SubResource( 98 ), SubResource( 99 ), SubResource( 100 ), SubResource( 101 ), SubResource( 102 ), SubResource( 103 ), SubResource( 104 ), SubResource( 105 ) ],
"loop": true,
"name": "Attack",
"speed": 26.0
}, {
"frames": [ SubResource( 106 ), SubResource( 107 ), SubResource( 108 ), SubResource( 109 ), SubResource( 110 ), SubResource( 111 ), SubResource( 112 ), SubResource( 113 ), SubResource( 114 ), SubResource( 115 ) ],
"loop": true,
"name": "Dash",
"speed": 29.0
}, {
"frames": [ SubResource( 117 ), SubResource( 118 ), SubResource( 119 ) ],
"loop": false,
"name": "Hurt",
"speed": 5.0
}, {
"frames": [ SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ) ],
"loop": true,
"name": "Jump",
"speed": 21.0
}, {
"frames": [ SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ) ],
"loop": true,
"name": "Run",
"speed": 14.0
}, {
"frames": [ SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ), SubResource( 91 ), SubResource( 92 ) ],
"loop": true,
"name": "Walk",
"speed": 9.0
} ]

[sub_resource type="RectangleShape2D" id=93]
extents = Vector2( 11.875, 25.5 )

[sub_resource type="Animation" id=120]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 39 ]
}

[sub_resource type="Animation" id=125]
resource_name = "attack"
length = 0.4
step = 0.04
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24, 0.28, 0.32 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}

[sub_resource type="Animation" id=144]
resource_name = "dash"
length = 0.333333
step = 0.0333333
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333, 0.266667, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 72, 73, 74, 75, 80, 81, 82, 83, 88, 89 ]
}

[sub_resource type="Animation" id=157]
resource_name = "death"
step = 0.142857
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.142857, 0.428571, 0.571429, 0.714286, 0.857143 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 46, 47, 54, 55, 55, 55 ]
}

[sub_resource type="Animation" id=150]
resource_name = "hurt"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 76, 77, 84 ]
}

[sub_resource type="Animation" id=121]
resource_name = "idle"
step = 0.125
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 48, 49, 56, 57, 64, 65 ]
}

[sub_resource type="Animation" id=126]
resource_name = "jump"
length = 0.5
step = 0.0625
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0625, 0.125, 0.1875, 0.25, 0.3125, 0.375, 0.4375 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 44, 45, 52, 53, 60, 61, 68, 69 ]
}

[sub_resource type="Animation" id=127]
resource_name = "walk"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 42, 43, 50, 58, 66, 67, 51 ]
}

[sub_resource type="AnimationNodeAnimation" id=128]
animation = "attack"

[sub_resource type="AnimationNodeAnimation" id=145]
animation = "dash"

[sub_resource type="AnimationNodeAnimation" id=158]
animation = "death"

[sub_resource type="AnimationNodeAnimation" id=151]
animation = "hurt"

[sub_resource type="AnimationNodeAnimation" id=129]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=130]
animation = "jump"

[sub_resource type="AnimationNodeAnimation" id=131]
animation = "walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=132]

[sub_resource type="AnimationNodeStateMachineTransition" id=133]

[sub_resource type="AnimationNodeStateMachineTransition" id=134]

[sub_resource type="AnimationNodeStateMachineTransition" id=135]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=136]

[sub_resource type="AnimationNodeStateMachineTransition" id=137]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=138]

[sub_resource type="AnimationNodeStateMachineTransition" id=139]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=140]

[sub_resource type="AnimationNodeStateMachineTransition" id=141]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=142]

[sub_resource type="AnimationNodeStateMachineTransition" id=143]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=146]

[sub_resource type="AnimationNodeStateMachineTransition" id=147]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=148]

[sub_resource type="AnimationNodeStateMachineTransition" id=149]

[sub_resource type="AnimationNodeStateMachineTransition" id=152]

[sub_resource type="AnimationNodeStateMachineTransition" id=153]

[sub_resource type="AnimationNodeStateMachineTransition" id=154]

[sub_resource type="AnimationNodeStateMachineTransition" id=155]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=164]
auto_advance = true

[sub_resource type="AnimationNodeStateMachine" id=123]
states/attack/node = SubResource( 128 )
states/attack/position = Vector2( 177, 56 )
states/dash/node = SubResource( 145 )
states/dash/position = Vector2( 942.747, 228.667 )
states/death/node = SubResource( 158 )
states/death/position = Vector2( 976.645, -71.2493 )
states/hurt/node = SubResource( 151 )
states/hurt/position = Vector2( 379.08, 284.568 )
states/idle/node = SubResource( 129 )
states/idle/position = Vector2( 177, 222 )
states/jump/node = SubResource( 130 )
states/jump/position = Vector2( 552.778, -70.1101 )
states/walk/node = SubResource( 131 )
states/walk/position = Vector2( 554, 222 )
transitions = [ "idle", "walk", SubResource( 132 ), "walk", "idle", SubResource( 133 ), "idle", "attack", SubResource( 134 ), "attack", "idle", SubResource( 135 ), "idle", "jump", SubResource( 136 ), "jump", "idle", SubResource( 137 ), "walk", "jump", SubResource( 138 ), "jump", "walk", SubResource( 139 ), "jump", "attack", SubResource( 140 ), "attack", "jump", SubResource( 141 ), "walk", "attack", SubResource( 142 ), "attack", "walk", SubResource( 143 ), "walk", "dash", SubResource( 146 ), "dash", "walk", SubResource( 147 ), "dash", "attack", SubResource( 148 ), "attack", "dash", SubResource( 149 ), "jump", "hurt", SubResource( 152 ), "walk", "hurt", SubResource( 153 ), "idle", "hurt", SubResource( 154 ), "hurt", "idle", SubResource( 155 ), "hurt", "death", SubResource( 164 ) ]
start_node = "idle"
graph_offset = Vector2( 56.3027, -133.519 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=124]

[sub_resource type="RectangleShape2D" id=156]
extents = Vector2( 4, 14 )

[node name="knight" type="KinematicBody2D" groups=["Player"]]
collision_mask = 16
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2.22782e-05, -1.74999 )
rotation = -3.14159
scale = Vector2( 1.59983, -0.450341 )
shape = SubResource( 4 )

[node name="Animations" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 17, -5 )
frames = SubResource( 84 )
animation = "Hurt"
frame = 1

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1, -9 )
texture = ExtResource( 8 )
hframes = 8
vframes = 12
frame = 39

[node name="AttackArea" type="Area2D" parent="." groups=["Sword"]]
position = Vector2( 35, 37 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( -12, -43 )
shape = SubResource( 93 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/RESET = SubResource( 120 )
anims/attack = SubResource( 125 )
anims/dash = SubResource( 144 )
anims/death = SubResource( 157 )
anims/hurt = SubResource( 150 )
anims/idle = SubResource( 121 )
anims/jump = SubResource( 126 )
anims/walk = SubResource( 127 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 123 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 124 )

[node name="DeadArea" type="Area2D" parent="." groups=["Player"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeadArea"]
position = Vector2( 2, -1 )
shape = SubResource( 156 )

[node name="SoundWalk" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
volume_db = -22.0

[connection signal="animation_finished" from="Animations" to="." method="_on_Animations_animation_finished"]
[connection signal="area_entered" from="DeadArea" to="." method="_on_DeadArea_area_entered"]
